_sass/base.scss
/* ... */
.news-preview {
  background-color: $tan;
  padding: 40px 0 16px;
}

.news-preview-group {
  margin-bottom: 24px;
  @media (min-width: $screen-xs) {
    display: grid;
    grid-gap: 24px;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
  }
  .news-preview-item {
    padding-bottom: 28px;
    border-bottom: 1px solid shade($border-color, 10%);
    @media (max-width: $screen-xs) {
      margin-bottom: 24px;
    }
  }
  .news-preview-details {
    // padding: 24px 0;
  }
  .news-preview-image {
    img {
      width: 100%;
      max-height: 260px;
      object-fit: cover;
    }
  }
  .news-preview-meta {
    font-size: 0.8125rem;
    font-weight: bold;
    color: $blue-light;
  }
  .news-preview-text {
    a {
      text-decoration: none;
    }
    h4 {

    }
    p {
      font-size: 0.9375rem;
      margin-bottom: 8px;
    }
  }
  .item-1 {
    grid-column: 1 / 2;
    grid-row: 1 / 3;
    .news-preview-details {
      @media (min-width: $screen-xs) {
        display: grid;
        grid-gap: 24px;
        grid-template-columns: repeat(6, 1fr);
      }
    }
    .news-preview-text {
      grid-column: 2 / -1;
    }
    .news-preview-image {
      margin-bottom: 18px;
    }
    .news-preview-meta {
      margin: 2px 0 4px;
    }
  }
  .item-2 {
    grid-column: 2 / -1;
    grid-row: 1 / 2;
  }
  .item-3 {
    grid-column: 2 / -1;
    grid-row: 2 / 3;
  }
  .item-2, .item-3 {
    display: grid;
    grid-gap: 24px;
    grid-template-columns: repeat(3, 1fr);
    @media (max-width: $screen-xs) {
      grid-gap: 16px;
    }
    .news-preview-details {
      grid-column: 2 / -1;
    }
    .news-preview-meta {
      margin: -4px 0 4px;
    }
    .news-preview-image {
      img {
        max-height: 110px;
      }
    }
  }
}

.module-details {
  display: flex;
  flex-direction: column;
}

.module-text {
  font-size: 0.9375rem;
  flex-grow: 1;
  margin-bottom: 12px;
  p {
    @media (max-width: $screen-xs) {
      font-size: 0.875rem;
    }
    span {
      font-weight: bold;
    }
  }
}

.module-image {
  display: block;
  background-color: $blue-dark;
  img {
    display: block;
    opacity: .95;
  }
}

.module-cta {
  font-size: 0.875rem;
  font-weight: bold;
  color: $blue-dark;
  position: relative;
  top: -9px;
  margin-top: 32px;
  &:after {
    content: '';
    display: block;
    position: absolute;
    right: 0;
    bottom: -9px;
    height: 40px;
    width: 40px;
    background-image: url(../images/chevron-white.svg);
    background-color: $blue-dark;
    background-repeat: no-repeat;
    background-position: left 17px center;
    border-radius: 20px;
    box-shadow: $default-box-shadow;
    transition: background-color 0.3s ease-in-out;
  }
}

.module {
  display: block;
  padding: 24px;
  text-decoration: none;
  overflow: hidden;
  &.light {
    display: grid;
    grid-gap: 24px;
    border: 1px solid $border-color;
    border-radius: $default-border-radius;
    &.module-cta {
      padding-bottom: 24px;
    }
  }
  &.light-img {
    padding: 0;
    border-radius: $default-border-radius;
    overflow: hidden;
    display: grid;
    grid-auto-rows: 1fr;
    grid-gap: 24px;
    border: 1px solid $border-color;
    @media (max-width: $screen-xs) {
      grid-template-rows: auto 240px;
      grid-gap: 0px;
    }
    .module-details {
      padding: 24px;
      border-bottom: none;
      border-top-left-radius: $default-border-radius;
      border-top-right-radius: $default-border-radius;
      @media (max-width: $screen-xs) {
        padding: 16px;
      }
    }
    .module-image {
      img {
        width: 100%;
        height: 100%;
        object-fit: cover;
      }
    }
  }
  &:hover {
    .module-cta {
      &:after {
        background-color: $red;
      }
    }
  }
  .project-involvement, .project-countries {
    margin-bottom: 4px;
  }
}

.link-through {
  color: $blue-dark;
  transition: box-shadow 0.3s ease-in-out;
  &:hover {
    box-shadow: $hover-box-shadow;
    text-decoration: none;
  }
}

.box-group {
  background-color: $tan;
  padding: 40px;
  margin-bottom: 24px;
  border-radius: 2px;
  .box-header {
    margin-bottom: 24px;
  }
  .box-body {
    display: flex;
    justify-content: space-between;
    position: relative;
  }
  .box-item {
    text-decoration: none;
  }
  .hr-v {
    width: 1px;
    background-color: shade($border-color, 10%);
    margin: 0 40px;
    align-self: stretch;
  }
  .module-image {
    margin-bottom: 20px;
  }
}

.two-rows {
  @media (min-width: $screen-xs) {
    .one {
      grid-row: 1 / 3;
      grid-gap: 0px;
    }
    .two {
      grid-column: 2 / -1;
      grid-row: 1 / 2;
      grid-template-columns: repeat(2, 1fr);
      .module-details {
        padding-right: 0;
      }
    }
    .three {
      grid-column: 2 / -1;
      grid-row: 2 / 3;
      grid-template-columns: repeat(2, 1fr);
      .module-details {
        padding-right: 0;
      }
    }
  }
}

.project-module {
  padding: 0;
  border: 1px solid $border-color;
  border-radius: 2px;
  margin-bottom: 16px;
  @media (min-width: $screen-xs) {
    margin-bottom: 24px;
  }
  .module-details {
    padding: 24px;
    @media (max-width: $screen-xs) {
      padding: 16px;
    }
    h3 {
      margin-bottom: 8px;
    }
  }
  .module-text {
    padding-right: 24px;
  }
  .module-image {
    display: block;
    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
      display: block;
    }
  }
}
/* ... */

